2008-11-29  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (URISource): New source class for a single document.

2008-11-27  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R: Refactoring.

2008-11-25  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R (.onLoad, .Last): Use tryCatch() to handle misconfigured
	Rmpi installations more gracefully.

2008-11-08  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (Source): Add Length slot.

2008-11-06  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R: Unify duplicated .onLoad function.

2008-11-03  Ingo Feinerer  <feinerer@logic.at>

	* DESCRIPTION (Suggests): Added Rmpi.

2008-11-02  Ingo Feinerer  <feinerer@logic.at>

	* R/source.R (getElem): Fix 'no visible binding' warning.

	* man/WeightFunction.Rd: Fix signature.

2008-08-03  Ingo Feinerer  <feinerer@logic.at>

	* R/weight.R: Introduce name abbreviations for weighting functions.

2008-07-24  Ingo Feinerer  <feinerer@logic.at>

	* R/AAA.R (.onLoad, .Last): Start and stop MPI cluster.

	* R/cluster.R: Provide convenience functions for using a MPI
	cluster.

	* R/termdocmatrix.R (TermDocMatrix): Use MPI cluster if
	available.

	* R/textdoccol.R (tmIndex, tmFilter, tmMap): Use MPI cluster if
	available.

2008-07-17  Ingo Feinerer  <feinerer@logic.at>

	* R/textdoccol.R (lapply): Removed debug print out.

2008-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readRCV1): Improved meta data extraction from
	Reuters Corpus Volume 1 documents.

2008-05-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/transform.R: Ensure that all mappings preserve multiline
	structures.

2008-05-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/filter.R: Every filter has now an attribute indicating whether
	it sould be applied to document level (doclevel).

	* R/textdoccol.R (tmFilter): Set searchFullText as new default
	filter.

2008-04-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/transform.R (replacePatterns): Replaced removeWords by