@@ -1,8 +1,7 @@
 # Author: Ingo Feinerer
 
-getSources <- function() {
+getSources <- function()
    c("CSVSource", "DirSource", "GmaneSource", "ReutersSource", "URISource", "VectorSource")
-}
 
 # Source objects
 
@@ -21,7 +20,7 @@ setClass("VectorSource",
 
 # A single document identified by a Uniform Resource Identifier
 setClass("URISource",
-         representation(URI = "ANY",
+         representation(URI = "call",
                         Content = "character"),
          contains = c("Source"))
 
@@ -32,20 +31,20 @@ setClass("DirSource",
 
 # A single CSV file where each line is interpreted as document
 setClass("CSVSource",
-         representation(URI = "ANY",
+         representation(URI = "call",
                         Content = "character"),
          contains = c("Source"))
 
 # A single XML file consisting of several Reuters documents
 # Works both for Reuters21578XML and RCV1 XML files
 setClass("ReutersSource",
-         representation(URI = "ANY",
+         representation(URI = "call",
                         Content = "list"),
          contains = c("Source"))
 
 # A single XML (RDF) file containing Gmane mailing list archive feeds
 setClass("GmaneSource",
-         representation(URI = "ANY",
+         representation(URI = "call",
                         Content = "list"),
          contains = c("Source"))
 
@@ -72,43 +71,31 @@ setMethod("DirSource",
           })
 
 setGeneric("URISource", function(object, encoding = "UTF-8") standardGeneric("URISource"))
-setMethod("URISource",
-          signature(object = "character"),
-          function(object, encoding = "UTF-8") {
-              object <- substitute(file(object, encoding = encoding))
-              con <- eval(object)
-              new("URISource", LoDSupport = TRUE, URI = object,
-                  Content = readLines(con), Position = 0, DefaultReader = readPlain,
-                  Encoding = encoding, Length = 1)
-          })
-setMethod("URISource",
-          signature(object = "ANY"),
-          function(object, encoding = "UTF-8") {
-              object <- substitute(object)
-              con <- eval(object)
-              new("URISource", LoDSupport = TRUE, URI = object,
-                  Content = readLines(con), Position = 0, DefaultReader = readPlain,
-                  Encoding = encoding, Length = 1)
-          })
+setMethod("URISource", signature(object = "character"),
+          function(object, encoding = "UTF-8")
+              new("URISource", LoDSupport = TRUE, URI = substitute(file(object, encoding = encoding)),
+                  Content = readLines(object, encoding = encoding), Position = 0, DefaultReader = readPlain,
+                  Encoding = encoding, Length = 1))
+setMethod("URISource", signature(object = "connection"),
+          function(object, encoding = "UTF-8")
+              new("URISource", LoDSupport = TRUE, URI = match.call()$object,
+                  Content = readLines(object), Position = 0, DefaultReader = readPlain,
+                  Encoding = encoding, Length = 1))
 
 setGeneric("CSVSource", function(object, encoding = "UTF-8") standardGeneric("CSVSource"))
 setMethod("CSVSource",
           signature(object = "character"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(file(object, encoding = encoding))
-              con <- eval(object)
-              content <- apply(read.csv(con), 1, paste, collapse = " ")
-              new("CSVSource", LoDSupport = FALSE, URI = object,
+              content <- apply(read.csv(object, encoding = encoding), 1, paste, collapse = " ")
+              new("CSVSource", LoDSupport = FALSE, URI = substitute(file(object, encoding = encoding)),
                   Content = content, Position = 0, DefaultReader = readPlain,
                   Encoding = encoding, Length = length(content))
           })
 setMethod("CSVSource",
-          signature(object = "ANY"),
+          signature(object = "connection"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(object)
-              con <- eval(object)
-              content <- apply(read.csv(con), 1, paste, collapse = " ")
-              new("CSVSource", LoDSupport = FALSE, URI = object,
+              content <- apply(read.csv(object), 1, paste, collapse = " ")
+              new("CSVSource", LoDSupport = FALSE, URI = match.call()$object,
                   Content = content, Position = 0, DefaultReader = readPlain,
                   Encoding = encoding, Length = length(content))
           })
@@ -117,28 +104,22 @@ setGeneric("ReutersSource", function(object, encoding = "UTF-8") standardGeneric
 setMethod("ReutersSource",
           signature(object = "character"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(file(object, encoding = encoding))
-              con <- eval(object)
-              corpus <- paste(readLines(con), "\n", collapse = "")
-              close(con)
+              corpus <- paste(readLines(object, encoding = encoding), "\n", collapse = "")
               tree <- xmlTreeParse(corpus, asText = TRUE)
               content <- xmlRoot(tree)$children
 
-              new("ReutersSource", LoDSupport = FALSE, URI = object,
+              new("ReutersSource", LoDSupport = FALSE, URI = substitute(file(object, encoding = encoding)),
                   Content = content, Position = 0, DefaultReader = readReut21578XML,
                   Encoding = encoding, Length = length(content))
           })
 setMethod("ReutersSource",
-          signature(object = "ANY"),
+          signature(object = "connection"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(object)
-              con <- eval(object)
-              corpus <- paste(readLines(con), "\n", collapse = "")
-              close(con)
+              corpus <- paste(readLines(object), "\n", collapse = "")
               tree <- xmlTreeParse(corpus, asText = TRUE)
               content <- xmlRoot(tree)$children
 
-              new("ReutersSource", LoDSupport = FALSE, URI = object,
+              new("ReutersSource", LoDSupport = FALSE, URI = match.call()$object,
                   Content = content, Position = 0, DefaultReader = readReut21578XML,
                   Encoding = encoding, Length = length(content))
           })
@@ -147,30 +128,24 @@ setGeneric("GmaneSource", function(object, encoding = "UTF-8") standardGeneric("
 setMethod("GmaneSource",
           signature(object = "character"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(file(object, encoding = encoding))
-              con <- eval(object)
-              corpus <- paste(readLines(con), "\n", collapse = "")
-              close(con)
+              corpus <- paste(readLines(object, encoding = encoding), "\n", collapse = "")
               tree <- xmlTreeParse(corpus, asText = TRUE)
               content <- xmlRoot(tree)$children
               content <- content[names(content) == "item"]
 
-              new("GmaneSource", LoDSupport = FALSE, URI = object,
+              new("GmaneSource", LoDSupport = FALSE, URI = substitute(file(object, encoding = encoding)),
                   Content = content, Position = 0, DefaultReader = readGmane,
                   Encoding = encoding, Length = length(content))
           })
 setMethod("GmaneSource",
-          signature(object = "ANY"),
+          signature(object = "connection"),
           function(object, encoding = "UTF-8") {
-              object <- substitute(object)
-              con <- eval(object)
-              corpus <- paste(readLines(con), "\n", collapse = "")
-              close(con)
+              corpus <- paste(readLines(object), "\n", collapse = "")
               tree <- xmlTreeParse(corpus, asText = TRUE)
               content <- xmlRoot(tree)$children
               content <- content[names(content) == "item"]
 
-              new("GmaneSource", LoDSupport = FALSE, URI = object,
+              new("GmaneSource", LoDSupport = FALSE, URI = match.call()$object,
                   Content = content, Position = 0, DefaultReader = readGmane,
                   Encoding = encoding, Length = length(content))
           })
